--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,73 @@
 *{margin: 0px; padding: 0px;}
-.superior {margin: 4px;
+body{background-image: url(img/fondo.jpg);
+height: 450px;
+background-size: cover;
+background-repeat: no-repeat;
+max-width: 1000px;
+margin: auto;
+padding: 30px 0;}
+.titulo{margin: 4px;
     height: 6px;
-    width: auto;
-           }
+    width:auto;
+color: beige; }
+h1{ color: red;
+    border-style: hidden;
+    height: 300%;
+    font-size: 300%;
+    font-family: comic;
+}
+h3{color: rgb(243, 245, 240);}
+H2{color: green;
+border-color: whitesmoke;}
 .fondo{ margin: 300px;
 }
+
+nav{margin-bottom: 50px;
+    position: fixed;
+    color: hotpink;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    float: left;
+}
+nav ul{
+    list-style: none;
+    overflow: hidden;
+    text-align: center;
+}
+nav ul li{
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: center;
+margin: 5px;
+}
+nav ul li a{
+    display: block;
+    padding: 20px;
+    color: #fff;
+    text-decoration: none;
+}
+nav ul li :hover{
+    background: #3ead47;
+}
+article{text-align: center;
+    color: whitesmoke;
+    font-family: impact;
+    font-size: 26px;
+    text-shadow: -1px -1px 1px #a70303, 1px 1px 1px #cf0707, -1px 1px 1px #ac0303, 1px -1px 1px #8b0202;
+    -webkit-text-fill-color: whitesmoke;
+    -webkit-text-stroke: 2px red;
+    margin: 250px;
+}
+h2{text-align: center;
+    color: white;
+    font-family: impact;
+    font-size: 30px;
+    text-shadow: -1px -1px 1px green, 1px 1px 1px green, -1px 1px 1px green, 1px -1px 1px green;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke: 2px green;
+    margin: 250px;
+    position: absolute;
+
+}
+img{width: 700px;
+    height: 700px;}
